--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </li>
                     <li>
                         <a href="">
-                            <img src="./img/notice.svg" alt="">
+                            <img class="noti" src="./img/notice.svg" alt="">
                             <div class="txt">
                                 <strong>공지사항</strong>
                                 <p>SEA LIFE 부산아쿠아리움에서 알려드립니다!</p>
@@ -119,15 +119,81 @@
                     </li>
                 </ul>
             </div>
-            <div class="tit">
-                <ul>
-                    <li>방문일 전 사전예약으로 즉시 할인</li>
-                    <li>모바일 QR코드로 빠른입장</li>
-                    <li>방문 전 일정변경 가능</li>
-                </ul>
+
+        </section>
+        <!-- <div class="tit">
+            <ul>
+                <li>방문일 전 사전예약으로 즉시 할인</li>
+                <li>모바일 QR코드로 빠른입장</li>
+                <li>방문 전 일정변경 가능</li>
+            </ul>
+        </div> -->
+        <section class="mainEvent">
+            <div class="inner">
+                <div class="itm">
+                    <div class="label">
+                        <span>신년맞이특가</span>
+                    </div>
+                    <img src="./img/event01.webp" alt="">
+                    <div class="txt">
+                        <strong>대/소인 입장권</strong>
+                        <p>사전예약시 최대 30% 할인 혜택<br />
+                            2023년 신년 맞이 특가</p>
+                        <a href="">구매하기</a>
+                    </div>
+
+                </div>
+                <div class="itm">
+                    <div class="label">
+                        <span>온라인최저가</span>
+                    </div>
+                    <img src="./img/event02.webp" alt="">
+                    <div class="txt">
+                        <strong>해피타임 입장권</strong>
+                        <p>오전 11시 이전 or 오후 5시 이후 입장 가능<br />
+                            사전예약으로 즐기는 해피타임</p>
+                        <a href="">구매하기</a>
+                    </div>
+
+                </div>
+                <div class="itm">
+                    <div class="label">
+                        <span>신년맞이특가</span>
+                    </div>
+                    <img src="./img/event03.webp" alt="">
+                    <div class="txt">
+                        <strong>1인권+포토패키지</strong>
+                        <p>2023년 신년맞이 특가! 최대 50% 할인<br />
+                            포토패키지로 소중한 추억 만드세요!<br />(대,소인 구분 없음)</p>
+                        <a href="">구매하기</a>
+                    </div>
+
+                </div>
+                <div class="itm">
+                    <div class="label">
+                        <span>신년맞이특가</span>
+                    </div>
+                    <img src="./img/event04.webp" alt="">
+                    <div class="txt">
+                        <strong>커플권+포토패키지</strong>
+                        <p>2023년 신년맞이 최대 56% 할인<br />
+                            오직 홈페이지에서만 구매 가능합니다.</p>
+                        <a href="">구매하기</a>
+                    </div>
+                </div>
             </div>
         </section>
+        <section class="mainInfo">
+            <div class="inner">
+                <h2>SEA LIFE <span>Aquarium</span></h2>
+                <div class="animal_slide">
+                    <img src="./img/peng.jpg" alt="">
 
+                </div>
+
+
+            </div>
+        </section>
     </main>
     <footer class="footer"></footer>
 </body>
