--- a/index.html
+++ b/index.html
@@ -183,17 +183,66 @@
                 </div>
             </div>
         </section>
-        <section class="mainInfo">
+        <section class="mainAnimal">
             <div class="inner">
                 <h2>SEA LIFE <span>Aquarium</span></h2>
                 <div class="animal_slide">
-                    <img src="./img/peng.jpg" alt="">
-
+                    <img src="./img/peng01.jpg" alt="">
+                    <img src="./img/peng02.jpg" alt="">
+                    <img src="./img/peng03.jpg" alt="">
+                    <img src="./img/peng04.jpg" alt="">
+                    <img src="./img/peng05.jpg" alt="">
                 </div>
+                <div class="ani_arrow">
+                    <i class="xi-angle-left-min"></i>
+                    <i class="xi-angle-right-min"></i>
+                </div>
+            </div>
+        </section>
+        <section class="mainInfo">
+            <div class="inner">
+                <h2>SEA LIFE <span>ACTIVITY</span> </h2>
+                <div class="info_gide">
+                    <figure>
+                        <div class="case">
+                            <a href="">
+                                <img src="./img/info01.png" alt="">
+                                <div class="txt">
+                                    <p>전시존 안내</p>
+                                    <span>Exhibition Guide</span>
+                                </div>
 
+                            </a>
+                        </div>
+                        <div class="over">
+                            <p>아이들의 체험 활동을 위한 바다거북 구조대, 세계 일류의 디지털 기술로 구현한 씨엣나잇 (Sea at night) 까지. 가족 여행부터 데이트까지 완벽한
+                                해운대 아쿠아리움의 전시존을 소개합니다.</p>
+                            <a href="">자세히 보기</a>
+                        </div>
+                    </figure>
+                    <figure>
+                        <div class="case">
+                            <a href="">
+                                <img src="./img/info02.jpg" alt=""></a>
+                            <div class="txt">
+                                <p>체험 &amp; 공연 정보</p>
+                                <span>experience &amp; performance</span>
+                            </div>
+
+                        </div>
+                        <div class="over">
+                            <p>남녀노소 누구나 즐길 수 있는 씨라이프 부산의 내부 체험 및 공연 정보를 소개합니다.<br />
+
+                                아름다운 산호마을 인어공주 공연부터 귀여운 펭귄 먹이주기 공연, 스릴 넘치는 상어 먹이주기 공연을 놓치지 마세요. 아이와 함께하는 부산 여행부터 커플
+                                데이트까지 씨라이프 부산에서만 만날 수 있는 멋진 경험을 선사합니다.</p>
+                            <a href="">자세히 보기</a>
+                        </div>
+                    </figure>
+                </div>
 
             </div>
         </section>
+
     </main>
     <footer class="footer"></footer>
 </body>
