--- a/index.html
+++ b/index.html
@@ -225,15 +225,29 @@
                             <a href="">
                                 <img src="./img/info02.jpg" alt=""></a>
                             <div class="txt">
-                                <p>체험 &amp; 공연 정보</p>
-                                <span>experience &amp; performance</span>
+                                <p>공연 정보</p>
+                                <span>performance information</span>
                             </div>
-
                         </div>
                         <div class="over">
-                            <p>남녀노소 누구나 즐길 수 있는 씨라이프 부산의 내부 체험 및 공연 정보를 소개합니다.<br />
-
-                                아름다운 산호마을 인어공주 공연부터 귀여운 펭귄 먹이주기 공연, 스릴 넘치는 상어 먹이주기 공연을 놓치지 마세요. 아이와 함께하는 부산 여행부터 커플
+                            <p>남녀노소 누구나 즐길 수 있는 씨라이프 부산의 공연 정보를 소개합니다.<br />
+                                아름다운 산호마을 인어공주 공연부터 귀여운 펭귄 먹이주기 공연을 놓치지 마세요. 아이와 함께하는 부산 여행부터 커플
+                                데이트까지 씨라이프 부산에서만 만날 수 있는 멋진 경험을 선사합니다.</p>
+                            <a href="">자세히 보기</a>
+                        </div>
+                    </figure>
+                    <figure>
+                        <div class="case">
+                            <a href="">
+                                <img src="./img/info03.webp" alt=""></a>
+                            <div class="txt">
+                                <p>체험 정보</p>
+                                <span>experience information</span>
+                            </div>
+                        </div>
+                        <div class="over">
+                            <p>남녀노소 누구나 즐길 수 있는 씨라이프 부산의 내부 체험을 소개합니다.<br />
+                                스릴 넘치는 상어 먹이주기 체험을 놓치지 마세요. 아이와 함께하는 부산 여행부터 커플
                                 데이트까지 씨라이프 부산에서만 만날 수 있는 멋진 경험을 선사합니다.</p>
                             <a href="">자세히 보기</a>
                         </div>
