--- a/index.html
+++ b/index.html
@@ -253,12 +253,62 @@
                         </div>
                     </figure>
                 </div>
-
             </div>
         </section>
-
+        <section class="mainReview">
+            <div class="inner">
+                <div class="left">
+                    <h3>생생한 체험후기를<br />알려드려요!</h3>
+                    <a href="">더보기 <i class="xi-angle-right"></i></a>
+                </div>
+                <div class="right">
+                    <div class="review_slide">
+                        <div class="itm">
+                            <span>2023-01-04</span>
+                            <p>좋아요</p>
+                        </div>
+                        <div class="itm">
+                            <span>2023-01-04</span>
+                            <p>좋아요</p>
+                        </div>
+                        <div class="itm">
+                            <span>2023-01-04</span>
+                            <p>좋아요아주굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿</p>
+                        </div>
+                        <div class="itm">
+                            <span>2023-01-04</span>
+                            <p>좋아요</p>
+                        </div>
+                        <div class="itm">
+                            <span>2023-01-04</span>
+                            <p>좋아요</p>
+                        </div>
+                        <div class="itm">
+                            <span>2023-01-04</span>
+                            <p>좋아요</p>
+                        </div>
+                    </div>
+                    <div class="review_arrow">
+                        <i class="xi-arrow-left"></i>
+                        <i class="xi-arrow-right"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <span>48100 부산광역시 해운대구 해운대해변로 266(중동) (주)멀린엔터테인먼트코리아</span>
+        <ul>
+            <li>사업자등록번호 617-81-61162</li>
+            <li>대표이사 이성호,로버트마크스미스</li>
+            <li>통신판매업신고번호 제 2006-부산해운-66423 호</li>
+        </ul>
+        <ul>
+            <li>대표전화 051-740-1700</li>
+            <li>팩스 051-740-1717</li>
+            <li>단체문의 051-740-1711</li>
+        </ul>
+    </footer>
 </body>
 
 </html>
