--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
                     <i class="xi-time-o"></i><span> 금일 운영시간: 10:00 - 19:00 (마지막 입장 6시)</span>
                 </div>
                 <ul>
-                    <li><a href="">학생단체문의</a></li>
-                    <li><a href="">일반단체 및 기업제휴문의</a></li>
-                    <li><a href="">해양생물보호</a></li>
-                    <li><a href="">회사소개</a></li>
-                    <li><a href=""><i class="xi-cart-o"></i></a></li>
-                    <li><a href=""><i class="xi-search"></i></a></li>
-                    <li><a href="">KO</a></li>
+                    <li><a href="#!">학생단체문의</a></li>
+                    <li><a href="#!">일반단체 및 기업제휴문의</a></li>
+                    <li><a href="#!">해양생물보호</a></li>
+                    <li><a href="#!">회사소개</a></li>
+                    <li><a href="#!"><i class="xi-cart-o"></i></a></li>
+                    <li><a href="#!"><i class="xi-search"></i></a></li>
+                    <li><a href="#!">KO</a></li>
                 </ul>
             </div>
         </div>
         <div class="inner bottom">
             <h1><a href=""><img src="./img/logo.png" alt=""></a></h1>
             <ul>
-                <li><a href="">입장권 &amp; 프로모션</a></li>
-                <li><a href="">내부 &amp; 공연안내</a></li>
-                <li><a href="">씨라이프 부산</a></li>
+                <li><a href="#!">입장권 &amp; 프로모션</a></li>
+                <li><a href="#!">내부 &amp; 공연안내</a></li>
+                <li><a href="#!">씨라이프 부산</a></li>
                 <li class="purchase"><a href="">구매하기</a></li>
             </ul>
         </div>
@@ -51,20 +51,20 @@
                     <img src="./img/seaatnight.jpg" alt="">
                     <strong>씨라이프 부산 아쿠아리움 공식 웹사이트</strong>
                     <p>신비로운 바닷속 세상!</p>
-                    <a href="">티켓 구매하기</a>
+                    <a href="#!">티켓 구매하기</a>
                 </div>
                 <div class="itm itm02">
                     <video autoplay loop muted src="./img/video01.mp4"></video>
                     <strong>모여라! 상어탐험대</strong>
                     <p>상어들의 비밀을 찾아 떠나볼까요?</p>
-                    <a href="">티켓 구매하기</a>
+                    <a href="#!">티켓 구매하기</a>
                 </div>
                 <div class="itm itm03">
                     <video autoplay loop muted src="./img/video02.mp4"></video>
                     <div class="absol">
                         <strong>바다거북 구조대가 되어보세요!</strong>
                         <p>SEA LIFE Busan Aquarium</p>
-                        <a href="">티켓 구매하기</a>
+                        <a href="#!">티켓 구매하기</a>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="quick_list">
                 <ul>
                     <li>
-                        <a href="">
+                        <a href="#!">
                             <img src="./img/ticket.svg" alt="">
                             <div class="txt">
                                 <strong>티켓 구매</strong>
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#!">
                             <img class="noti" src="./img/notice.svg" alt="">
                             <div class="txt">
                                 <strong>공지사항</strong>
@@ -103,7 +103,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="#!">
                             <img src="./img/save.svg" alt="">
                             <div class="txt">
                                 <strong>안전 수칙</strong>
@@ -121,13 +121,19 @@
             </div>
 
         </section>
-        <!-- <div class="tit">
-            <ul>
-                <li>방문일 전 사전예약으로 즉시 할인</li>
-                <li>모바일 QR코드로 빠른입장</li>
+        <div class="dec">
+            <ul class="tit">
+                <li>방문일 전 사전예약으로 즉시 할인</li>/
+                <li>모바일 QR코드로 빠른입장</li>/
                 <li>방문 전 일정변경 가능</li>
             </ul>
-        </div> -->
+            <!-- <ul>
+                <li><a href=""><img src="./img/ico_youtube_on.png" alt=""></a></li>
+                <li><a href=""><img src="./img/ico_facebook_on.png" alt=""></a></li>
+                <li><a href=""><img src="./img/ico_instagram_on.png" alt=""></a></li>
+                <li><a href=""><img src="./img/ico_post_on.png" alt=""></a></li>
+            </ul> -->
+        </div>
         <section class="mainEvent">
             <div class="inner">
                 <div class="itm">
@@ -139,7 +145,7 @@
                         <strong>대/소인 입장권</strong>
                         <p>사전예약시 최대 30% 할인 혜택<br />
                             2023년 신년 맞이 특가</p>
-                        <a href="">구매하기</a>
+                        <a href="#!">구매하기</a>
                     </div>
 
                 </div>
@@ -152,7 +158,7 @@
                         <strong>해피타임 입장권</strong>
                         <p>오전 11시 이전 or 오후 5시 이후 입장 가능<br />
                             사전예약으로 즐기는 해피타임</p>
-                        <a href="">구매하기</a>
+                        <a href="#!">구매하기</a>
                     </div>
 
                 </div>
@@ -165,7 +171,7 @@
                         <strong>1인권+포토패키지</strong>
                         <p>2023년 신년맞이 특가! 최대 50% 할인<br />
                             포토패키지로 소중한 추억 만드세요!<br />(대,소인 구분 없음)</p>
-                        <a href="">구매하기</a>
+                        <a href="#!">구매하기</a>
                     </div>
 
                 </div>
@@ -178,7 +184,7 @@
                         <strong>커플권+포토패키지</strong>
                         <p>2023년 신년맞이 최대 56% 할인<br />
                             오직 홈페이지에서만 구매 가능합니다.</p>
-                        <a href="">구매하기</a>
+                        <a href="#!">구매하기</a>
                     </div>
                 </div>
             </div>
@@ -205,7 +211,7 @@
                 <div class="info_gide">
                     <figure>
                         <div class="case">
-                            <a href="">
+                            <a href="#!">
                                 <img src="./img/info01.png" alt="">
                                 <div class="txt">
                                     <p>전시존 안내</p>
@@ -217,12 +223,12 @@
                         <div class="over">
                             <p>아이들의 체험 활동을 위한 바다거북 구조대, 세계 일류의 디지털 기술로 구현한 씨엣나잇 (Sea at night) 까지. 가족 여행부터 데이트까지 완벽한
                                 해운대 아쿠아리움의 전시존을 소개합니다.</p>
-                            <a href="">자세히 보기</a>
+                            <a href="#!">자세히 보기</a>
                         </div>
                     </figure>
                     <figure>
                         <div class="case">
-                            <a href="">
+                            <a href="#!">
                                 <img src="./img/info02.jpg" alt=""></a>
                             <div class="txt">
                                 <p>공연 정보</p>
@@ -233,12 +239,12 @@
                             <p>남녀노소 누구나 즐길 수 있는 씨라이프 부산의 공연 정보를 소개합니다.<br />
                                 아름다운 산호마을 인어공주 공연부터 귀여운 펭귄 먹이주기 공연을 놓치지 마세요. 아이와 함께하는 부산 여행부터 커플
                                 데이트까지 씨라이프 부산에서만 만날 수 있는 멋진 경험을 선사합니다.</p>
-                            <a href="">자세히 보기</a>
+                            <a href="#!">자세히 보기</a>
                         </div>
                     </figure>
                     <figure>
                         <div class="case">
-                            <a href="">
+                            <a href="#!">
                                 <img src="./img/info03.webp" alt=""></a>
                             <div class="txt">
                                 <p>체험 정보</p>
@@ -249,7 +255,7 @@
                             <p>남녀노소 누구나 즐길 수 있는 씨라이프 부산의 내부 체험을 소개합니다.<br />
                                 스릴 넘치는 상어 먹이주기 체험을 놓치지 마세요. 아이와 함께하는 부산 여행부터 커플
                                 데이트까지 씨라이프 부산에서만 만날 수 있는 멋진 경험을 선사합니다.</p>
-                            <a href="">자세히 보기</a>
+                            <a href="#!">자세히 보기</a>
                         </div>
                     </figure>
                 </div>
@@ -264,28 +270,42 @@
                 <div class="right">
                     <div class="review_slide">
                         <div class="itm">
-                            <span>2023-01-04</span>
-                            <p>좋아요</p>
+                            <a href="#!">
+                                <span>2023-01-04</span>
+                                <p>아이와 함께 하기 좋은 곳입니다 상어존이 생겨서 더 재미있어요^^ 해양생물 좋아하는 아이들은 꼭 방문해보세요</p>
+                            </a>
                         </div>
                         <div class="itm">
-                            <span>2023-01-04</span>
-                            <p>좋아요</p>
+                            <a href="#!">
+                                <span>2023-01-03</span>
+                                <p>우선 위치가 굉장히 좋아요! 해운대에 위치해있어서 찾기 쉬워요 다른 아쿠아리움도 많이 가봤지만 여기는 불가사리 만지는 체험도 가능해서 불가사리를 처음
+                                    만져봤어요
+                                </p>
+                            </a>
                         </div>
                         <div class="itm">
-                            <span>2023-01-04</span>
-                            <p>좋아요아주굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿굿</p>
+                            <a href="#!">
+                                <span>2023-01-01</span>
+                                <p>해운대 바다도 구경하고 이벤트도 다양하고 공연도 재미있었어요 아쉬운건 기프트샵을 빼곤 지하 상권은 문연곳이 없어서 아쉬웠네요</p>
+                            </a>
                         </div>
                         <div class="itm">
-                            <span>2023-01-04</span>
-                            <p>좋아요</p>
+                            <a href="#!">
+                                <span>2022-12-31</span>
+                                <p>규모가 생각보다 큽니다 전시하는 생물 종류도 많습니다 해운대에 위치하고 있어 끝나고 해운대 둘러보는 겸으로 들리기 좋습니다</p>
+                            </a>
                         </div>
                         <div class="itm">
-                            <span>2023-01-04</span>
-                            <p>좋아요</p>
+                            <a href="#!">
+                                <span>2022-12-27</span>
+                                <p>합리적인 가격에 기대 이상의 볼거리를 보고 왔습니다. 특히 저는 수달, 피라루쿠, 가오리들 유영이 기억에 남아요</p>
+                            </a>
                         </div>
                         <div class="itm">
-                            <span>2023-01-04</span>
-                            <p>좋아요</p>
+                            <a href="#!">
+                                <span>2022-12-25</span>
+                                <p>부산사람이지만 아쿠아리움 처음 가봤는데 처음보는 해양생물들이 많아서 신기하고 즐거웠습니다!</p>
+                            </a>
                         </div>
                     </div>
                     <div class="review_arrow">
@@ -297,17 +317,25 @@
         </section>
     </main>
     <footer class="footer">
-        <span>48100 부산광역시 해운대구 해운대해변로 266(중동) (주)멀린엔터테인먼트코리아</span>
-        <ul>
-            <li>사업자등록번호 617-81-61162</li>
-            <li>대표이사 이성호,로버트마크스미스</li>
-            <li>통신판매업신고번호 제 2006-부산해운-66423 호</li>
-        </ul>
-        <ul>
-            <li>대표전화 051-740-1700</li>
-            <li>팩스 051-740-1717</li>
-            <li>단체문의 051-740-1711</li>
-        </ul>
+        <div class="inner">
+            <div class="left">
+                <span>48100 부산광역시 해운대구 해운대해변로 266(중동) (주)멀린엔터테인먼트코리아</span>
+                <ul>
+                    <li>사업자등록번호 617-81-61162</li>
+                    <li>대표이사 이성호,로버트마크스미스</li>
+                    <li>통신판매업신고번호 제 2006-부산해운-66423 호</li>
+                </ul>
+                <ul>
+                    <li>대표전화 051-740-1700</li>
+                    <li>팩스 051-740-1717</li>
+                    <li>단체문의 051-740-1711</li>
+                </ul>
+            </div>
+            <div class="right">
+                <a href=""><img src="./img/clean-zone.webp" alt=""></a>
+            </div>
+        </div>
+
     </footer>
 </body>
 
