--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
                             <a href="#!">
                                 <span>2023-01-03</span>
                                 <p>우선 위치가 굉장히 좋아요! 해운대에 위치해있어서 찾기 쉬워요 다른 아쿠아리움도 많이 가봤지만 여기는 불가사리 만지는 체험도 가능해서 불가사리를 처음
-                                    만져봤어요
-                                </p>
+                                    만져봤어요</p>
                             </a>
                         </div>
                         <div class="itm">
