--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
         <section class="mainEvent">
             <div class="inner">
-                <div class="itm">
+                <div class="itm" data-aos="fade-up" data-aos-delay="300">
                     <div class="label">
                         <span>신년맞이특가</span>
                     </div>
@@ -149,7 +149,7 @@
                     </div>
 
                 </div>
-                <div class="itm">
+                <div class="itm" data-aos="fade-up" data-aos-delay="600">
                     <div class="label">
                         <span>온라인최저가</span>
                     </div>
@@ -162,7 +162,7 @@
                     </div>
 
                 </div>
-                <div class="itm">
+                <div class="itm" data-aos="fade-up" data-aos-delay="900">
                     <div class="label">
                         <span>신년맞이특가</span>
                     </div>
@@ -175,7 +175,7 @@
                     </div>
 
                 </div>
-                <div class="itm">
+                <div class="itm" data-aos="fade-up" data-aos-delay="1200">
                     <div class="label">
                         <span>신년맞이특가</span>
                     </div>
@@ -190,7 +190,7 @@
             </div>
         </section>
         <section class="mainAnimal">
-            <div class="inner">
+            <div class="inner" data-aos="fade-up" data-aos-delay="300">
                 <h2>SEA LIFE <span>Aquarium</span></h2>
                 <div class="animal_slide">
                     <img src="./img/peng01.jpg" alt="">
@@ -210,8 +210,8 @@
                 <h2>SEA LIFE <span>ACTIVITY</span> </h2>
                 <div class="info_gide">
                     <figure>
-                        <div class="case">
-                            <a href="#!">
+                        <div class="case" data-aos="fade-up">
+                            <a href=" #!">
                                 <img src="./img/info01.png" alt="">
                                 <div class="txt">
                                     <p>전시존 안내</p>
@@ -227,7 +227,7 @@
                         </div>
                     </figure>
                     <figure>
-                        <div class="case">
+                        <div class="case" data-aos="fade-up">
                             <a href="#!">
                                 <img src="./img/info02.jpg" alt=""></a>
                             <div class="txt">
@@ -243,7 +243,7 @@
                         </div>
                     </figure>
                     <figure>
-                        <div class="case">
+                        <div class="case" data-aos="fade-up">
                             <a href="#!">
                                 <img src="./img/info03.webp" alt=""></a>
                             <div class="txt">
@@ -263,11 +263,11 @@
         </section>
         <section class="mainReview">
             <div class="inner">
-                <div class="left">
+                <div class="left" data-aos="fade-up">
                     <h3>생생한 체험후기를<br />알려드려요!</h3>
                     <a href="">더보기 <i class="xi-angle-right"></i></a>
                 </div>
-                <div class="right">
+                <div class="right" data-aos="fade-up">
                     <div class="review_slide">
                         <div class="itm">
                             <a href="#!">
@@ -334,8 +334,10 @@
                 <a href=""><img src="./img/clean-zone.webp" alt=""></a>
             </div>
         </div>
-
     </footer>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
