--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>씨라이프 부산 연습</title>
+    <link rel="shortcut icon" href="./img/favicons.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/aos.css">
     <link rel="stylesheet" href="./css/slick.css">
